--- a/JcyMapFramework.xcframework/ios-arm64_x86_64-simulator/JcyMapFramework.framework/Modules/JcyMapFramework.swiftmodule/x86_64-apple-ios-simulator.abi.json
+++ b/JcyMapFramework.xcframework/ios-arm64_x86_64-simulator/JcyMapFramework.framework/Modules/JcyMapFramework.swiftmodule/x86_64-apple-ios-simulator.abi.json
@@ -11306,65 +11306,58 @@
     {
       "filePath": "\/Users\/bjack\/Desktop\/Xcode\/JcyMapLibrary-iOS\/JcyMapLibrary\/gis\/map\/JCYMapView+Sketch+location.swift",
       "kind": "IntegerLiteral",
-      "offset": 4488,
+      "offset": 4490,
       "length": 1,
       "value": "2"
     },
     {
       "filePath": "\/Users\/bjack\/Desktop\/Xcode\/JcyMapLibrary-iOS\/JcyMapLibrary\/gis\/map\/JCYMapView+Sketch+location.swift",
       "kind": "IntegerLiteral",
-      "offset": 4492,
+      "offset": 4494,
       "length": 1,
       "value": "0"
     },
     {
       "filePath": "\/Users\/bjack\/Desktop\/Xcode\/JcyMapLibrary-iOS\/JcyMapLibrary\/gis\/map\/JCYMapView+Sketch+location.swift",
       "kind": "StringLiteral",
-      "offset": 4510,
+      "offset": 4512,
       "length": 14,
       "value": "\"绘图完成\""
     },
     {
       "filePath": "\/Users\/bjack\/Desktop\/Xcode\/JcyMapLibrary-iOS\/JcyMapLibrary\/gis\/map\/JCYMapView+Sketch+location.swift",
       "kind": "IntegerLiteral",
-      "offset": 4604,
+      "offset": 4606,
       "length": 1,
       "value": "0"
     },
     {
       "filePath": "\/Users\/bjack\/Desktop\/Xcode\/JcyMapLibrary-iOS\/JcyMapLibrary\/gis\/map\/JCYMapView+Sketch+location.swift",
       "kind": "IntegerLiteral",
-      "offset": 4607,
+      "offset": 4609,
       "length": 1,
       "value": "0"
     },
     {
       "filePath": "\/Users\/bjack\/Desktop\/Xcode\/JcyMapLibrary-iOS\/JcyMapLibrary\/gis\/map\/JCYMapView+Sketch+location.swift",
       "kind": "IntegerLiteral",
-      "offset": 4610,
+      "offset": 4612,
       "length": 1,
       "value": "0"
     },
     {
       "filePath": "\/Users\/bjack\/Desktop\/Xcode\/JcyMapLibrary-iOS\/JcyMapLibrary\/gis\/map\/JCYMapView+Sketch+location.swift",
       "kind": "StringLiteral",
-      "offset": 4628,
+      "offset": 4630,
       "length": 14,
       "value": "\"绘图完成\""
     },
     {
       "filePath": "\/Users\/bjack\/Desktop\/Xcode\/JcyMapLibrary-iOS\/JcyMapLibrary\/gis\/map\/JCYMapView+Sketch+location.swift",
       "kind": "IntegerLiteral",
-      "offset": 4691,
-      "length": 1,
-      "value": "0"
-    },
-    {
-      "filePath": "\/Users\/bjack\/Desktop\/Xcode\/JcyMapLibrary-iOS\/JcyMapLibrary\/gis\/map\/JCYMapView+Sketch+location.swift",
-      "kind": "IntegerLiteral",
-      "offset": 4694,
-      "length": 1,
-      "value": "0"
+      "offset": 4693,
+      "length": 2,
+      "value": "-1"
     },
     {
       "filePath": "\/Users\/bjack\/Desktop\/Xcode\/JcyMapLibrary-iOS\/JcyMapLibrary\/gis\/map\/JCYMapView+Sketch+location.swift",
@@ -11375,45 +11368,24 @@
     },
     {
       "filePath": "\/Users\/bjack\/Desktop\/Xcode\/JcyMapLibrary-iOS\/JcyMapLibrary\/gis\/map\/JCYMapView+Sketch+location.swift",
-      "kind": "StringLiteral",
+      "kind": "IntegerLiteral",
       "offset": 4700,
+      "length": 1,
+      "value": "0"
+    },
+    {
+      "filePath": "\/Users\/bjack\/Desktop\/Xcode\/JcyMapLibrary-iOS\/JcyMapLibrary\/gis\/map\/JCYMapView+Sketch+location.swift",
+      "kind": "StringLiteral",
+      "offset": 4703,
       "length": 2,
       "value": "\"\""
     },
     {
       "filePath": "\/Users\/bjack\/Desktop\/Xcode\/JcyMapLibrary-iOS\/JcyMapLibrary\/gis\/map\/JCYMapView+Sketch+location.swift",
       "kind": "StringLiteral",
-      "offset": 4704,
+      "offset": 4707,
       "length": 14,
-      "value": "\"绘图完成\""
-    },
-    {
-      "filePath": "\/Users\/bjack\/Desktop\/Xcode\/JcyMapLibrary-iOS\/JcyMapLibrary\/gis\/map\/JCYMapView+Sketch+location.swift",
-      "kind": "IntegerLiteral",
-      "offset": 4765,
-      "length": 1,
-      "value": "0"
-    },
-    {
-      "filePath": "\/Users\/bjack\/Desktop\/Xcode\/JcyMapLibrary-iOS\/JcyMapLibrary\/gis\/map\/JCYMapView+Sketch+location.swift",
-      "kind": "IntegerLiteral",
-      "offset": 4768,
-      "length": 1,
-      "value": "0"
-    },
-    {
-      "filePath": "\/Users\/bjack\/Desktop\/Xcode\/JcyMapLibrary-iOS\/JcyMapLibrary\/gis\/map\/JCYMapView+Sketch+location.swift",
-      "kind": "IntegerLiteral",
-      "offset": 4829,
-      "length": 1,
-      "value": "2"
-    },
-    {
-      "filePath": "\/Users\/bjack\/Desktop\/Xcode\/JcyMapLibrary-iOS\/JcyMapLibrary\/gis\/map\/JCYMapView+Sketch+location.swift",
-      "kind": "StringLiteral",
-      "offset": 4848,
-      "length": 14,
-      "value": "\"绘图完成\""
+      "value": "\"绘图失败\""
     },
     {
       "filePath": "\/Users\/bjack\/Library\/Developer\/Xcode\/DerivedData\/JcyMapLibrary-iOS-bxbuiuypskdcgqbrcegahihdgqay\/Build\/Intermediates.noindex\/ArchiveIntermediates\/JcyMapFramework\/IntermediateBuildFilesPath\/JcyMapLibrary-iOS.build\/Release-iphonesimulator\/JcyMapFramework.build\/DerivedSources\/GeneratedAssetSymbols.swift",
